--- a/TeraCyteAssignment/App.xaml
+++ b/TeraCyteAssignment/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="TeraCyteAssignment.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TeraCyteAssignment"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:TeraCyteAssignment">
     <Application.Resources>
          
     </Application.Resources>
